--- a/.gitattributes
+++ b/.gitattributes
@@ -89,6 +89,8 @@ Classes/CInvisibleToolbar.h -text
 Classes/CInvisibleToolbar.m -text
 Classes/CPopoverManager.h -text
 Classes/CPopoverManager.m -text
+Classes/Category.h -text
+Classes/Category.m -text
 Classes/Comment.h -text
 Classes/Comment.m -text
 Classes/CommentTableViewCell.h -text
@@ -151,6 +153,8 @@ Classes/NSString+Util.h -text
 Classes/NSString+Util.m -text
 Classes/NSString+XMLExtensions.h -text
 Classes/NSString+XMLExtensions.m -text
+Classes/Page.h -text
+Classes/Page.m -text
 Classes/PageManager.h -text
 Classes/PageManager.m -text
 Classes/PageViewController.h -text
@@ -269,8 +273,11 @@ Classes/WebSignupViewController.h -text
 Classes/WebSignupViewController.m -text
 Classes/WelcomeViewController.h -text
 Classes/WelcomeViewController.m -text
-Classes/WordPress.xcdatamodel/elements -text
-Classes/WordPress.xcdatamodel/layout -text
+Classes/WordPress.xcdatamodeld/.xccurrentversion -text
+Classes/WordPress.xcdatamodeld/WordPress[!!-~]2.xcdatamodel/elements -text svneol=unset#unset
+Classes/WordPress.xcdatamodeld/WordPress[!!-~]2.xcdatamodel/layout -text svneol=unset#unset
+Classes/WordPress.xcdatamodeld/WordPress.xcdatamodel/elements -text
+Classes/WordPress.xcdatamodeld/WordPress.xcdatamodel/layout -text
 Classes/WordPressAppDelegate.h -text
 Classes/WordPressAppDelegate.m -text
 Classes/XMLRPC/XMLRPCConnection+Authentication.h -text
