Posts and drafts are in Core Data.
 * New Core Data model: posts/pages share an abstract parent, removed unused attributes
 * Autosave classes removed since it's being handled better from Core Data now
 * Posts list works again
 * Post editor works with reduced functionality for now
 * Added [NSString numericValue] utility function

--- a/.gitattributes
+++ b/.gitattributes
@@ -51,20 +51,14 @@
 /CXMLNode_PrivateExtensions.m -text
 /CXMLNode_XPathExtensions.h -text
 /CXMLNode_XPathExtensions.m -text
+Classes/AbstractPost.h -text
+Classes/AbstractPost.m -text
 Classes/AddSiteViewController.h -text
 Classes/AddSiteViewController.m -text
 Classes/AddSiteViewController.xib -text
 Classes/AddUsersBlogsViewController.h -text
 Classes/AddUsersBlogsViewController.m -text
 Classes/AddUsersBlogsViewController.xib -text
-Classes/AutosaveContentViewController.h -text
-Classes/AutosaveContentViewController.m -text
-Classes/AutosaveContentViewController.xib -text
-Classes/AutosaveManager.h -text
-Classes/AutosaveManager.m -text
-Classes/AutosaveViewController.h -text
-Classes/AutosaveViewController.m -text
-Classes/AutosaveViewController.xib -text
 Classes/Blog.h -text
 Classes/Blog.m -text
 Classes/BlogDataManager.h -text
