--- a/.gitattributes
+++ b/.gitattributes
@@ -393,6 +393,8 @@ WordPress.xcodeproj/project.pbxproj -text
 /XMLRPCResponse.m -text
 /XMLValueDecoder.h -text
 /XMLValueDecoder.m -text
+/attachment.png -text svneol=unset#unset
+/attachment@2x.png -text svneol=unset#unset
 /autosave.png -text
 /autosave@2x.png -text
 /backNav.png -text
@@ -451,6 +453,10 @@ c_tidy/utf8.h -text
 c_tidy/version.h -text
 c_tidy/win32tc.c -text
 c_tidy/win32tc.h -text
+/categories.png -text svneol=unset#unset
+/categories@2x.png -text svneol=unset#unset
+/categoriesHighlighted.png -text svneol=unset#unset
+/categoriesHighlighted@2x.png -text svneol=unset#unset
 /category_child.png -text
 /category_child@2x.png -text
 /chart.png -text
@@ -485,6 +491,8 @@ c_tidy/win32tc.h -text
 /logo_wporg.png -text
 /logo_wporg@2x.png -text
 /main.m -text
+/movie.png -text svneol=unset#unset
+/movie@2x.png -text svneol=unset#unset
 /page_control_blue.png -text
 /page_control_blue@2x.png -text
 /page_control_blue_active.png -text
@@ -502,6 +510,14 @@ c_tidy/win32tc.h -text
 /settings@2x.png -text
 /sync.png -text svneol=unset#unset
 /sync@2x.png -text
+/tabPointer.png -text svneol=unset#unset
+/tabPointer@2x.png -text svneol=unset#unset
+/table_sep.png -text svneol=unset#unset
+/table_sep@2x.png -text svneol=unset#unset
+/tags.png -text svneol=unset#unset
+/tags@2x.png -text svneol=unset#unset
+/tagsHighlighted.png -text svneol=unset#unset
+/tagsHighlighted@2x.png -text svneol=unset#unset
 /uncheck.png -text
 /uncheck@2x.png -text
 /uncrustify.cfg -text
