--- a/.gitattributes
+++ b/.gitattributes
@@ -93,6 +93,8 @@ Classes/CommentsTableViewDelegate.h -text
 Classes/CommentsViewController.h -text
 Classes/CommentsViewController.m -text
 Classes/Constants.h -text
+Classes/Coordinate.h -text
+Classes/Coordinate.m -text
 Classes/CrashReportView.xib -text
 Classes/CrashReportViewController.h -text
 Classes/CrashReportViewController.m -text
