added an utility class that help us to remove characters outside UTF-8 from a String and use it to remove invalid UTF-8 characters from the XML-RPC response

--- a/.gitattributes
+++ b/.gitattributes
@@ -203,6 +203,8 @@ Classes/StatsTableCell.m -text
 Classes/StatsTableViewController.h -text
 Classes/StatsTableViewController.m -text
 Classes/StatsTableViewController.xib -text
+Classes/StringUtils.h -text
+Classes/StringUtils.m -text
 Classes/TransparentToolbar.h -text
 Classes/TransparentToolbar.m -text
 Classes/UIDevice-Hardware.h -text
