Added fake migration policy to trick core data

--- a/.gitattributes
+++ b/.gitattributes
@@ -128,6 +128,8 @@ Classes/EditPostViewController.m -text
 Classes/EditSiteViewController.h -text
 Classes/EditSiteViewController.m -text
 Classes/EditSiteViewController.xib -text
+Classes/FakeMigration.h -text
+Classes/FakeMigration.m -text
 Classes/FlippingViewController.h -text
 Classes/FlippingViewController.m -text
 Classes/GravatarImageView.h -text
