--- a/.gitattributes
+++ b/.gitattributes
@@ -22,8 +22,13 @@
 /AddBlogValidationBackground.png -text svneol=unset#unset
 /AddBlogValidationBackground@2x.png -text
 /AddSiteViewController-iPad.xib -text
+/AddSiteViewController.xib -text
 /AddUsersBlogsViewController-iPad.xib -text
+/AddUsersBlogsViewController.xib -text
+/BetaFeedbackViewController.xib -text
+/BlogHTTPAuthenticationViewController.xib -text
 /BlogSettingsView-iPad.xib -text
+/BlogSplitViewDetailViewController.xib -text
 /BlogViewController-iPad.xib -text
 /BlogViewController.xib -text
 /CTidy.h -text
@@ -54,21 +59,16 @@ Classes/AbstractPost.h -text
 Classes/AbstractPost.m -text
 Classes/AddSiteViewController.h -text
 Classes/AddSiteViewController.m -text
-Classes/AddSiteViewController.xib -text
 Classes/AddUsersBlogsViewController.h -text
 Classes/AddUsersBlogsViewController.m -text
-Classes/AddUsersBlogsViewController.xib -text
 Classes/BetaFeedbackViewController.h -text
 Classes/BetaFeedbackViewController.m -text
-Classes/BetaFeedbackViewController.xib -text
 Classes/BetaUIWindow.h -text
 Classes/BetaUIWindow.m -text
 Classes/Blog.h -text
 Classes/Blog.m -text
-Classes/BlogHTTPAuthenticationViewController.xib -text
 Classes/BlogSplitViewDetailViewController.h -text
 Classes/BlogSplitViewDetailViewController.m -text
-Classes/BlogSplitViewDetailViewController.xib -text
 Classes/BlogViewController.h -text
 Classes/BlogViewController.m -text
 Classes/BlogsTableViewCell.h -text
@@ -95,7 +95,6 @@ Classes/CommentsViewController.m -text
 Classes/Constants.h -text
 Classes/Coordinate.h -text
 Classes/Coordinate.m -text
-Classes/CrashReportView.xib -text
 Classes/CrashReportViewController.h -text
 Classes/CrashReportViewController.m -text
 Classes/CrashReporter.framework/CrashReporter -text
@@ -122,12 +121,10 @@ Classes/EGOTableViewPullRefresh/EGORefreshTableHeaderView.h -text
 Classes/EGOTableViewPullRefresh/EGORefreshTableHeaderView.m -text
 Classes/EditPageViewController.h -text
 Classes/EditPageViewController.m -text
-Classes/EditPostParentModalViewController.xib -text
 Classes/EditPostViewController.h -text
 Classes/EditPostViewController.m -text
 Classes/EditSiteViewController.h -text
 Classes/EditSiteViewController.m -text
-Classes/EditSiteViewController.xib -text
 Classes/FakeMigration.h -text
 Classes/FakeMigration.m -text
 Classes/FileLogger.h -text
@@ -138,7 +135,6 @@ Classes/GravatarImageView.h -text
 Classes/GravatarImageView.m -text
 Classes/HelpViewController.h -text
 Classes/HelpViewController.m -text
-Classes/HelpViewController.xib -text
 Classes/ImageCache.h -text
 Classes/ImageCache.m -text
 Classes/MediaObjectViewController.h -text
@@ -161,10 +157,8 @@ Classes/Post.h -text
 Classes/Post.m -text
 Classes/PostAnnotation.h -text
 Classes/PostAnnotation.m -text
-Classes/PostLocationViewController.xib -text
 Classes/PostMediaViewController.h -text
 Classes/PostMediaViewController.m -text
-Classes/PostMediaViewController.xib -text
 Classes/PostPreviewViewController.h -text
 Classes/PostPreviewViewController.m -text
 Classes/PostSettingsHelpViewController.h -text
@@ -187,20 +181,14 @@ Classes/ResourcesTableViewSection.h -text
 Classes/ResourcesTableViewSection.m -text
 Classes/RotatingNavigationController.h -text
 Classes/RotatingNavigationController.m -text
-Classes/StatsCategoryViewController.xib -text
-Classes/StatsChartViewController-iPad.xib -text
 Classes/StatsChartViewController.h -text
 Classes/StatsChartViewController.m -text
-Classes/StatsChartViewController.xib -text
-Classes/StatsPageControlViewController-iPad.xib -text
 Classes/StatsPageControlViewController.h -text
 Classes/StatsPageControlViewController.m -text
-Classes/StatsPageControlViewController.xib -text
 Classes/StatsTableCell.h -text
 Classes/StatsTableCell.m -text
 Classes/StatsTableViewController.h -text
 Classes/StatsTableViewController.m -text
-Classes/StatsTableViewController.xib -text
 Classes/TransparentToolbar.h -text
 Classes/TransparentToolbar.m -text
 Classes/UIDevice-Hardware.h -text
@@ -255,7 +243,6 @@ Classes/WPXMLReader.h -text
 Classes/WPXMLReader.m -text
 Classes/WPcomLoginViewController.h -text
 Classes/WPcomLoginViewController.m -text
-Classes/WPcomLoginViewController.xib -text
 Classes/WebSignupViewController.h -text
 Classes/WebSignupViewController.m -text
 Classes/WelcomeViewController.h -text
@@ -283,6 +270,7 @@ Classes/stats.png -text
 Classes/stats@2x.png -text
 /CommentViewController.xib -text
 /CommentsViewController.xib -text
+/CrashReportView.xib -text
 Creation/CXMLDocument_CreationExtensions.h -text
 Creation/CXMLDocument_CreationExtensions.m -text
 Creation/CXMLNode_CreationExtensions.h -text
@@ -292,12 +280,15 @@ Creation/CXMLNode_CreationExtensions.m -text
 /Default.png -text
 /Default@2x.png -text
 /Disclosure[!!-~]Indicator.png -text
+/EditPostParentModalViewController.xib -text
 /EditPostViewController-iPad.xib -text
 /EditPostViewController.xib -text
+/EditSiteViewController.xib -text
 /Entitlements.plist -text
 FlurryLib/FlurryAPI.h -text
 FlurryLib/FlurryAdDelegate.h -text
 FlurryLib/libFlurry.a -text svneol=unset#unset
+/HelpViewController.xib -text
 /HttpHelper.h -text
 /HttpHelper.m -text
 /HttpHelperDelegate.h -text
@@ -320,7 +311,9 @@ FlurryLib/libFlurry.a -text svneol=unset#unset
 /Media.h -text
 /Media.m -text
 /MediaObjectView.xib -text
+/PostLocationViewController.xib -text
 /PostMediaViewController-iPad.xib -text
+/PostMediaViewController.xib -text
 /PostPreviewViewController.xib -text
 /PostSettingsViewController.xib -text
 /PostViewController-iPad.xib -text
@@ -334,7 +327,13 @@ Resources-iPad/MainWindow-iPad.xib -text
 /RoundedRectBlack.png -text
 Settings.bundle/Root.plist -text
 Settings.bundle/en.lproj/Root.strings -text
+/StatsCategoryViewController.xib -text
+/StatsChartViewController-iPad.xib -text
+/StatsChartViewController.xib -text
+/StatsPageControlViewController-iPad.xib -text
+/StatsPageControlViewController.xib -text
 /StatsTableViewController-iPad.xib -text
+/StatsTableViewController.xib -text
 /ToolbarIconCamera.png -text svneol=unset#unset
 /ToolbarIconEye.png -text svneol=unset#unset
 /ToolbarIconGear.png -text svneol=unset#unset
@@ -361,6 +360,7 @@ Settings.bundle/en.lproj/Root.strings -text
 /WPPublishOnEditController.xib -text
 /WPSelectionTableViewController.xib -text
 /WPcomLoginViewController-iPad.xib -text
+/WPcomLoginViewController.xib -text
 /WPpregressHUDBackground.png -text
 /WPpregressHUDBackground@2x.png -text
 /WebSignupViewController-iPad.xib -text
