--- a/.gitattributes
+++ b/.gitattributes
@@ -472,6 +472,7 @@ es.lproj/Localizable.strings -text svneol=unset#unset
 /help.png -text
 /iTunesArtwork -text
 /license.txt -text
+/localize.py -text
 /lock.png -text
 /logo_stacked.png -text
 /logo_welcome.png -text
