--- a/.gitattributes
+++ b/.gitattributes
@@ -174,6 +174,8 @@ Classes/PostsViewController.h -text
 Classes/PostsViewController.m -text
 Classes/QuickPhotoViewController.h -text
 Classes/QuickPhotoViewController.m -text
+Classes/QuickPicturePreviewView.h -text
+Classes/QuickPicturePreviewView.m -text
 Classes/StatsChartViewController.h -text
 Classes/StatsChartViewController.m -text
 Classes/StatsPageControlViewController.h -text
