added paperclip above quick photo preview, updated drop down arrow graphic, tweaked quick photo layout to match @ievolvers design

--- a/.gitattributes
+++ b/.gitattributes
@@ -445,6 +445,7 @@ ja.lproj/Localizable.strings -text svneol=unset#unset
 /page_control_blue_active@2x.png -text
 /pages.png -text
 /pages@2x.png -text
+/paperclip.png -text
 /photos.png -text
 /photos@2x.png -text
 /posts.png -text
