--- a/.gitattributes
+++ b/.gitattributes
@@ -467,6 +467,8 @@ ja.lproj/Localizable.strings -text svneol=unset#unset
 pt.lproj/Localizable.strings -text svneol=unset#unset
 /quickPhotoButton.png -text svneol=unset#unset
 /quickPhotoButton@2x.png -text svneol=unset#unset
+/quickPhotoButtonBackground.png -text
+/quickPhotoButtonBackground@2x.png -text
 /quickPhotoButtonHighlighted.png -text svneol=unset#unset
 /quickPhotoButtonHighlighted@2x.png -text
 /quickPhotoTextView.png -text svneol=unset#unset
