Fixed translated string widths in some table cells (wpcom login, add/edit blog)

--- a/.gitattributes
+++ b/.gitattributes
@@ -198,6 +198,8 @@ Classes/UITableViewActivityCell.h -text
 Classes/UITableViewActivityCell.m -text
 Classes/UITableViewSwitchCell.h -text
 Classes/UITableViewSwitchCell.m -text
+Classes/UITableViewTextFieldCell.h -text
+Classes/UITableViewTextFieldCell.m -text
 Classes/UIViewController_iPadExtensions.h -text
 Classes/UIViewController_iPadExtensions.m -text
 Classes/WPAddCategoryViewController.h -text
