--- a/.gitattributes
+++ b/.gitattributes
@@ -457,6 +457,7 @@ ja.lproj/Localizable.strings -text svneol=unset#unset
 /main.m -text
 /movie.png -text svneol=unset#unset
 /movie@2x.png -text svneol=unset#unset
+nb.lproj/Localizable.strings -text svneol=unset#unset
 nl.lproj/Localizable.strings -text svneol=unset#unset
 /page_control_blue.png -text
 /page_control_blue@2x.png -text
@@ -509,3 +510,4 @@ sv.lproj/Localizable.strings -text svneol=unset#unset
 /write@2x.png -text
 /xhtml1-transitional.dtd -text
 /xhtmlValidatorTemplate.xhtml -text
+zh-Hans.lproj/Localizable.strings -text svneol=unset#unset
