Added web view with blog's dashboard (linked on blog settings)

--- a/.gitattributes
+++ b/.gitattributes
@@ -228,6 +228,8 @@ Classes/WPSegmentedSelectionTableViewController.h -text
 Classes/WPSegmentedSelectionTableViewController.m -text
 Classes/WPSelectionTableViewController.h -text
 Classes/WPSelectionTableViewController.m -text
+Classes/WPWebViewController.h -text
+Classes/WPWebViewController.m -text
 Classes/WPcomLoginViewController.h -text
 Classes/WPcomLoginViewController.m -text
 Classes/WebSignupViewController.h -text
