--- a/.gitattributes
+++ b/.gitattributes
@@ -243,6 +243,8 @@ Classes/WordPress-1-2.xcmappingmodel/xcmapping.xml -text
 Classes/WordPress.xcdatamodeld/.xccurrentversion -text
 Classes/WordPress.xcdatamodeld/WordPress[!!-~]2.xcdatamodel/elements -text svneol=unset#unset
 Classes/WordPress.xcdatamodeld/WordPress[!!-~]2.xcdatamodel/layout -text svneol=unset#unset
+Classes/WordPress.xcdatamodeld/WordPress[!!-~]3.xcdatamodel/elements -text svneol=unset#unset
+Classes/WordPress.xcdatamodeld/WordPress[!!-~]3.xcdatamodel/layout -text svneol=unset#unset
 Classes/WordPress.xcdatamodeld/WordPress.xcdatamodel/elements -text
 Classes/WordPress.xcdatamodeld/WordPress.xcdatamodel/layout -text
 Classes/WordPressAppDelegate.h -text
