Rearranged buttons on WPWebViewController, also added action sheet to view url in safari or copy url to pasteboard.  Added iPad xib for WPWebViewController in order to allow the view to be modal on iPad and pushed in the navigation controller on iPhone. Also removed line that was calling the reader in viewdidload.

--- a/.gitattributes
+++ b/.gitattributes
@@ -329,6 +329,7 @@ Settings.bundle/en.lproj/Root.strings -text
 /WPAddCategoryViewController.xib -text
 /WPCategoriesController.xib -text
 /WPSelectionTableViewController.xib -text
+/WPWebViewController-iPad.xib -text
 /WPWebViewController.xib -text
 /WPcomLoginViewController-iPad-stats.xib -text
 /WPcomLoginViewController-iPad.xib -text
@@ -339,6 +340,7 @@ Settings.bundle/en.lproj/Root.strings -text
 /WebSignupViewController.xib -text
 /WelcomeViewController-iPad.xib -text
 /WelcomeViewController.xib -text
+/WordPress[!!-~]copy-Info.plist -text
 WordPress.xcodeproj/project.pbxproj -text
 /WordPress_Prefix.pch -text
 /XMLRPCConnection.h -text
