Read icon! Upped the iPad format bar padding, and added values to track button margin as well. They look more balanced now (default button size is square, bold, italic, lists, etc are all square buttons now). Also updated the downArrow graphic for QP, it was fuzzy.. crisp now.

--- a/.gitattributes
+++ b/.gitattributes
@@ -524,6 +524,8 @@ pt.lproj/Localizable.strings -text svneol=unset#unset
 /quickPhotoButtonHighlighted@2x.png -text
 /quickPhotoTextView.png -text svneol=unset#unset
 /quickPhotoTextView@2x.png -text svneol=unset#unset
+/read.png -text
+/read@2x.png -text
 /redoDisabled~ipad.png -text svneol=unset#unset
 /redo~ipad.png -text svneol=unset#unset
 /right.png -text svneol=unset#unset
